--- a/ServerAPI/ServerAPI.csproj
+++ b/ServerAPI/ServerAPI.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+  <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
   <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="8.0.8" />
 </ItemGroup>
   <ItemGroup>
